allprojects {
    group 'com.endoflineblog.truffle'
    version '1.0'
}

subprojects {
    apply plugin: 'java'

    repositories {
        mavenCentral()
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
    }


    // These arguments are required because of the JVM 11's module system -
    // we grant this module access to the packages from the Truffle API JAR
    test {
        useJUnitPlatform()

        jvmArgs '-ea', '--enable-native-access=ALL-UNNAMED'

        testLogging {
            events 'failed'
            exceptionFormat 'full'
        }
    }

    ext {
        graal_version = '25.1.3'
        antlr_version = '4.12.0'
    }

    dependencies {
        implementation "org.graalvm.truffle:truffle-api:$graal_version"
        implementation "org.graalvm.polyglot:polyglot:$graal_version"
        annotationProcessor "org.graalvm.truffle:truffle-dsl-processor:$graal_version"

        testImplementation "org.junit.jupiter:junit-jupiter:5.9.3"
        testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    }
}
